frist try, ... not so fast in building as hoped